--- a/templates/Front/mention_legale.html.twig
+++ b/templates/Front/mention_legale.html.twig
@@ -11,7 +11,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="">Accueil</a></li>
+            <li><a href="{{ path('home') }}">Accueil</a></li>
             <li><a href="">Boutique</a></li>
             <li><a href="">Contact</a></li>
         </ul>
