--- a/templates/Front/home.html.twig
+++ b/templates/Front/home.html.twig
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="{{ path('home') }}">Accueil</a></li>
-            <li><a href="">Boutique</a></li>
+            <li><a href="{{ path('shop')}}">Boutique</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
