--- a/templates/Front/mention_legale.html.twig
+++ b/templates/Front/mention_legale.html.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ asset ('css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Maitree:wght@300&family=Staatliches&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brasserie La Baleine</title>
 </head>
@@ -12,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="{{ path('home') }}">Accueil</a></li>
-            <li><a href="">Boutique</a></li>
+            <li><a href="{{ path('shop') }}">Boutique</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
